Fix comment jumping off viewport when post has unsized images (#159)
* Fix comment jumping off viewport when post has unsized images

* fix comment scrolling

* retry scroll as needed

* Final version

* scroll to comment body instead of the subtree

* fix anchoring element
add fallback - cancel focusing (and remove classname) in 10 seconds

* stop trying cancelling anchoring effects - this allows to greatly simplify whole thing.
Position focused element on top of the page - just below the topbar

* revert change to package.json

--- a/frontend/src/index.scss
+++ b/frontend/src/index.scss
@@ -140,32 +140,6 @@ img.low-rating, video.low-rating, iframe.low-rating {
   max-width: 48px;
 }
 
-/*br {*/
-/*  content: "";*/
-/*  padding: 2em;*/
-/*  margin: -2em;*/
-/*  display: block;*/
-/*  font-size: 25%;*/
-/*}*/
-
-@keyframes highlight-flash {
-  from {
-    background-color: transparent;
-  }
-  to {
-    background-color: var(--highlight-bg);
-  }
-}
-
-.highlight {
-  /*background: var(--highlight-bg);*/
-  /*transition: background-color 1s;*/
-  animation-duration: 0.5s;
-  animation-name: highlight-flash;
-  animation-iteration-count: 6;
-  animation-direction: alternate;
-}
-
 body.no-scroll {
   overflow: hidden;
   margin-right: 18px;
